# COMP8120-Chess

./: .gitignore  4move_checkmate.txt  CMakeLists.txt  README.md  board_position.txt  chromosome.json  conanfile.txt  sample_broken_position.txt  sample_pos.txt  sudo_gbd.sh  white_is_in_check.txt
game/: CMakeLists.txt  game.drawio
game/controllers/: CMakeLists.txt
game/controllers/dearimgui_chessboard/: CMakeLists.txt
game/controllers/dearimgui_chessboard/include/: dear_imgui_chessboard.hpp
game/controllers/dearimgui_chessboard/src/: dear_imgui_chessboard.cpp
game/controllers/include/: ai_controller.hpp  ci_controller.hpp  controller.hpp  display.hpp  server_controller.hpp
game/controllers/src/: ai_controller.cpp  ci_controller.cpp  controller.cpp  display.cpp  server_controller.cpp
game/docs/: game.drawio
game/game/: CMakeLists.txt
game/game/include/: board.hpp  game.hpp  space.hpp
game/game/src/: board.cpp  game.cpp  space.cpp
game/pieces/: CMakeLists.txt
game/pieces/include/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
game/pieces/src/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
genetic_algorithms_python/: GA_random_moves.py  Smarter_GA.py  chromosome.json  chromosome_worse.json  play_bot.py  requirements.txt
genetic_algorithms_python/best/: generation_0.json  generation_2.json  generation_5.json  generation_6.json
imgui_initializer/: CMakeLists.txt
imgui_initializer/imgui_bindings/: CMakeLists.txt
imgui_initializer/include/: imgui_initializer.hpp  texture_loader.hpp
imgui_initializer/src/: imgui_initializer.cpp  texture_loader.cpp
networking/: CMakeLists.txt
networking/client/: CMakeLists.txt
networking/client/include/: client.hpp  client_display.hpp  client_game.hpp
networking/client/src/: client.cpp  client_display.cpp  client_game.cpp
networking/server/: CMakeLists.txt
networking/server/include/: server.hpp
networking/server/src/: server.cpp
samples/board_from_file/: CMakeLists.txt
samples/board_from_file/src/: from_string.cpp
samples/client_controller/: CMakeLists.txt
samples/client_controller/src/: client.cpp
samples/dearimgui/: CMakeLists.txt
samples/dearimgui/src/: main.cpp
samples/networking_sample/: CMakeLists.txt
samples/networking_sample/src/: client_sample.cpp  server_sample.cpp
samples/printboard/: CMakeLists.txt
samples/printboard/src/: main.cpp
samples/render_chessboard/: CMakeLists.txt
samples/render_chessboard/src/: main.cpp
